--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,16 +8,21 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "ace-builds": "^1.34.2",
     "bootstrap": "^5.3.3",
+    "codemirror": "^6.0.1",
     "jumbotron": "^0.2.9",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
+    "react-ace": "^11.0.1",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-player": "^2.16.0",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
+    "vm": "^0.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
