--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-dom": "^18.2.0",
+    "react-player": "^2.16.0",
     "react-router": "^6.21.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
